--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add styles to the form container */
 .form-container {
-  max-width: 300px;
+  max-width: 500px;
   padding: 10px;
   background-color: white;
 }
@@ -61,7 +61,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 16px 20px;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 50%;
   margin-bottom:10px;
   opacity: 0.8;
 }
@@ -91,8 +91,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 <iframe id="sn_va_web_client"
     title="ServiceNow Virtual Agent Client"
-    width="600"
-    height="900"
+    width="100%"
+    height="600px"
     src="https://dev92332.service-now.com/sn_va_web_client_app_embed.do">
 </iframe>
 
