--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  
+   background-color: #555;
+  color: white;
 }
 
 /* Add some hover effects to buttons */
