--- a/index.html
+++ b/index.html
@@ -81,14 +81,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 </head>
 <body>
 
-<h2>My company portal</h2>
-<p>Click on the button at the bottom of this page to open the chat form.</p>
-<p>Note that the button and the form is fixed - they will always be positioned to the bottom of the browser window.</p>
-
 <button class="open-button" onclick="openForm()">Chat</button>
 
 <div class="chat-popup" id="myForm">
-  <form action="/action_page.php" class="form-container">
+  <div class="form-container">
     <h1>Chat</h1>
 
 <iframe id="sn_va_web_client"
@@ -100,7 +96,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-  </form>
+  </div>
 </div>
 
 <script>
