--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg'); backgr
 <iframe id="sn_va_web_client"
     title="ServiceNow Virtual Agent Client"
     width="100%"
-    height="600px"
+    height="100%"
     src="https://dev92332.service-now.com/sn_va_web_client_app_embed.do">
 </iframe>
 
@@ -99,7 +99,14 @@ body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg'); backgr
 
 <script>
 function openForm() {
-  document.getElementById("myForm").style.display = "block";
+  if(window.orientation != "undefined")
+  {
+    window.open("https://dev92332.service-now.com/sn_va_web_client_app_embed.do");
+  }
+  else{
+    document.getElementById("myForm").style.display = "block";
+  }
+  
 }
 
 function closeForm() {
