--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg'); backgr
 
 <script>
 function openForm() {
-  if(window.orientation != "undefined")
+  if(window.orientation != undefined)
   {
     window.open("https://dev92332.service-now.com/sn_va_web_client_app_embed.do");
   }
