--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg'); backgr
 <iframe id="sn_va_web_client"
     title="ServiceNow Virtual Agent Client"
     width="100%"
-    height="100%"
+    height="500px"
     src="https://dev92332.service-now.com/sn_va_web_client_app_embed.do">
 </iframe>
 
