--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg') no-repeat right top; background-size:cover; background-repeat:none}
+body {font-family: Arial, Helvetica, sans-serif;background:url('bg.jpg'); background-size:cover; background-repeat:none;
+  height:1024px}
 * {box-sizing: border-box;}
 
 /* Button used to open the chat form - fixed at the bottom of the page */
@@ -109,7 +110,9 @@ function openForm() {
   
 }
 if(window.orientation != undefined)
-  document.body.style.background = "url('bg-mobile.jpg') no-repeat right top";
+{ 
+   document.body.style.background = "url('bg-mobile.jpg')";
+}
 function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
