--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       right: 28px;
       width: 280px;
     }
+    .cancel{
+      background-color: #555;
+      color: white;
+      padding: 16px 20px;
+      border: none;
+      cursor: pointer;
+      opacity: 0.8;
+      width: 280px;
+    }
     /* The popup chat - hidden by default */
     .chat-popup {
       display: none;
@@ -30,6 +39,7 @@
       border: 3px solid #f1f1f1;
       z-index: 9;
     }
+   
 
   </style>
 </head>
@@ -67,7 +77,7 @@
       height="500px"
       src="https://dev92332.service-now.com/sn_va_web_client_app_embed.do">
     </iframe>
-      <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+      <button type="button" class="cancel" onclick="closeForm()">Close</button>
     </div>
     
     <button class="open-button" onclick="openForm()">Chat</button>
