--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
       padding: 16px 20px;
       border: none;
       cursor: pointer;
-      opacity: 0.8;
-      width: 280px;
+      opacity: 1;
+      width: 100%;
     }
     /* The popup chat - hidden by default */
     .chat-popup {
+      min-width:300px;
       display: none;
       position: fixed;
+      background:white;
       bottom: 0;
       right: 15px;
       border: 3px solid #f1f1f1;
