--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>Contoso</h1>
-  <p>A sample website for demonstrating integration of chat support</p> 
+  <h1>Conversational Experience</h1>
+  <p>A sample website for demonstrating integration of chat support with service now.</p> 
 </div>
   
 <div class="container">
+  <div class="row">
+      <img class="img-fluid" src="bg1.jpg" />
+  </div>
   <div class="row">
     <div class="col-sm-4">
       <h3>Digital</h3>
