--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Contoso - ServiceNow</title>
+  <title>CE - ServiceNow</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -52,7 +52,7 @@
 </div>
   
 <div class="container">
-  <div class="row">
+  <div style="margin:20px">
       <img class="img-fluid" src="bg1.jpg" />
   </div>
   <div class="row">
