--- a/index.html
+++ b/index.html
@@ -45,15 +45,40 @@
   </style>
 </head>
 <body>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin:24px 0;">
+    <a class="navbar-brand" href="javascript:void(0)">CE</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navb">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Innovations</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">About us</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+      </form>
+    </div>
+  </nav>
+</div>
 <div class="jumbotron text-center">
   <h1>Conversational Experience</h1>
   <p>A sample website for demonstrating integration of chat support with service now.</p> 
 </div>
   
 <div class="container">
-  <div style="margin:20px">
-      <img class="img-fluid" src="bg2.jpg" />
+  <div style="margin-bottom:20px">
+      <img class="img-fluid" src="bg1.jpg" />
   </div>
   <div class="row">
     <div class="col-sm-4">
