--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="margin:24px 0;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
     <a class="navbar-brand" href="javascript:void(0)">CE</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb">
       <span class="navbar-toggler-icon"></span>
@@ -58,10 +58,16 @@
           <a class="nav-link" href="javascript:void(0)">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Innovations</a>
+          <a class="nav-link" href="javascript:void(0)">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">About us</a>
+          <a class="nav-link" href="javascript:void(0)">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Careers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Contact us</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -78,7 +84,7 @@
   
 <div class="container">
   <div style="margin-bottom:20px">
-      <img class="img-fluid" src="bg1.jpg" />
+      <img class="img-fluid" src="bg2.jpg" />
   </div>
   <div class="row">
     <div class="col-sm-4">
