--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="collapse navbar-collapse" id="navb">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Home</a>
+          <a class="nav-link" href="webchat.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)">Products</a>
