--- a/webchat.html
+++ b/webchat.html
@@ -53,7 +53,7 @@
     <div class="collapse navbar-collapse" id="navb">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)">Products</a>
@@ -111,7 +111,7 @@
       title="Virtual Agent Client"
       width="100%"
       height="500px"
-      src="'https://webchat.botframework.com/embed/nowbuddy?s=wvT81oLYBcA.OTFWciUuRGwnTZbbY0_o0nxR6O38Ad14QCh1ja2R734">
+      src="https://webchat.botframework.com/embed/nowbuddy?s=wvT81oLYBcA.OTFWciUuRGwnTZbbY0_o0nxR6O38Ad14QCh1ja2R734">
     </iframe>
     </div>
     
