--- a/directline.html
+++ b/directline.html
@@ -29,7 +29,7 @@
         const { token } = await res.json();
         window.WebChat.renderWebChat({
           directLine: window.WebChat.createDirectLine({ token }),
-          userID: 'dl_kushal',
+          userID: 'dl_anish',
           username: 'Kushal Bhabra',
         }, document.getElementById('webchat'));
         document.querySelector('#webchat > *').focus();
