--- a/directline.html
+++ b/directline.html
@@ -29,7 +29,7 @@
         const { token } = await res.json();
         window.WebChat.renderWebChat({
           directLine: window.WebChat.createDirectLine({ token }),
-          user = {
+          user : {
                 id: 'dl_anish',
                 name: 'anish'
             }
