--- a/directline.html
+++ b/directline.html
@@ -25,8 +25,9 @@
         // Your client code must provide either a secret or a token to talk to your bot.
         // Tokens are more secure. To learn about the differences between secrets and tokens
         // and to understand the risks associated with using secrets, visit https://docs.microsoft.com/en-us/azure/bot-service/rest-api/bot-framework-rest-direct-line-3-0-authentication?view=azure-bot-service-4.0
-        const res = await fetch('https://nowbuddy.azurewebsites.net/config', { method: 'POST' ,mode: 'cors'});
-        const { token } = await res.json();
+        //const res = await fetch('https://nowbuddy.azurewebsites.net/config', { method: 'POST' ,mode: 'cors'});
+        //const { token } = await res.json();
+        const {token}='mmQ8XSWEGSQ.JxC2HAM8Qk-8pLQ0dS9CiRspLvrJANyeAky8Z3krvEk';
         window.WebChat.renderWebChat({
           directLine: window.WebChat.createDirectLine({ token }),
           user : {
