--- a/directline.html
+++ b/directline.html
@@ -25,13 +25,12 @@
         // Your client code must provide either a secret or a token to talk to your bot.
         // Tokens are more secure. To learn about the differences between secrets and tokens
         // and to understand the risks associated with using secrets, visit https://docs.microsoft.com/en-us/azure/bot-service/rest-api/bot-framework-rest-direct-line-3-0-authentication?view=azure-bot-service-4.0
-        //const res = await fetch('https://nowbuddy.azurewebsites.net/config', { method: 'POST' ,mode: 'cors'});
-        //const { token } = await res.json();
+        const res = await fetch('https://nowbuddy.azurewebsites.net/config', { method: 'POST' ,mode: 'cors'});
+        const { token } = await res.json();
        
         window.WebChat.renderWebChat({
-          directLine: window.WebChat.createDirectLine({ secret:'wvT81oLYBcA.OTFWciUuRGwnTZbbY0_o0nxR6O38Ad14QCh1ja2R734' }),
-          user: { id: "dl_Anish", name: "Anish" },
-
+          directLine: window.WebChat.createDirectLine({ token }),
+         
         }, document.getElementById('webchat'));
         document.querySelector('#webchat > *').focus();
       })().catch(err => console.error(err));
