--- a/directline.html
+++ b/directline.html
@@ -1,7 +1,9 @@
+
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Web Chat: Full-featured bundle</title>
+    <title>Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--
       This CDN points to the latest official release of Web Chat. If you need to test against Web Chat's latest bits, please refer to pointing to Web Chat's MyGet feed:
@@ -11,6 +13,7 @@
     <style>
       html, body { height: 100% }
       body { margin: 0 }
+
       #webchat {
         height: 100%;
         width: 100%;
@@ -25,13 +28,20 @@
         // Your client code must provide either a secret or a token to talk to your bot.
         // Tokens are more secure. To learn about the differences between secrets and tokens
         // and to understand the risks associated with using secrets, visit https://docs.microsoft.com/en-us/azure/bot-service/rest-api/bot-framework-rest-direct-line-3-0-authentication?view=azure-bot-service-4.0
-        const res = await fetch('https://nowbuddy.azurewebsites.net/config', { method: 'POST' ,mode: 'cors'});
+
+        const res = await fetch('https://fsab.azurewebsites.net/directline/token', { method: 'POST' });
         const { token } = await res.json();
-       
+
+        const styleOptions = {
+          botAvatarImage: 'https://docs.microsoft.com/en-us/azure/bot-service/v4sdk/media/logo_bot.svg?view=azure-bot-service-4.0',
+          botAvatarInitials: 'BF'
+        };
+
         window.WebChat.renderWebChat({
           directLine: window.WebChat.createDirectLine({ token }),
-         
+          styleOptions
         }, document.getElementById('webchat'));
+
         document.querySelector('#webchat > *').focus();
       })().catch(err => console.error(err));
     </script>
