--- a/fsab.html
+++ b/fsab.html
@@ -114,7 +114,7 @@
       title="Virtual Agent Client"
       width="100%"
       height="500px"
-      src="https://webchat.botframework.com/embed/fsab?s=kGW-Q3_nPMA.vekuh1_4rJ7QOX1wfO_WfOmvKfa_R0Y3Shd8K2vYDrM">
+      src="https://kushalbhabra.github.io/chat/directline.html">
     </iframe>
     </div>
     
